--- a/views/team.erb
+++ b/views/team.erb
@@ -6,6 +6,13 @@
 
   <h2>Team Name: Brooklyn Nets</h2>
   <form method="POST" action="/newteam">
+    <p>Team Name: <input type="text" name="team_name"></p>
+    <p>Coach: <input type="text" name="coach_name"></p>
+    <p>Point Guard: <input type="text" name="point_guard"></p>
+    <p>Shooting Guard <input type="text" name="shooting_guard"></p>
+    <p>Small Forward: <input type="text" name="small_forward"></p>
+    <p>Power Forward: <input type="text" name="power_forward"></p>
+    <p>Center: <input type="text" name="center"></p>
  </head>
  <body>
 
