--- a/views/team.erb
+++ b/views/team.erb
@@ -5,14 +5,12 @@
   <title>Basketball Team</title>
 
   <h2>Team Name: Brooklyn Nets</h2>
-  <form method="POST" action="/newteam">
-    <p>Team Name: <input type="text" name="team_name"></p>
-    <p>Coach: <input type="text" name="coach_name"></p>
-    <p>Point Guard: <input type="text" name="point_guard"></p>
-    <p>Shooting Guard <input type="text" name="shooting_guard"></p>
-    <p>Small Forward: <input type="text" name="small_forward"></p>
-    <p>Power Forward: <input type="text" name="power_forward"></p>
-    <p>Center: <input type="text" name="center"></p>
+    <p>Coach: Louis Armstrong</p>
+    <p>Point Guard: Ella Fitzgerald</p>
+    <p>Shooting Guard Miles Davis</p>
+    <p>Small Forward: Dave Brubeck</p>
+    <p>Power Forward: John Coltrane</p>
+    <p>Center: Sonny Rollins</p>
  </head>
  <body>
 
