--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
 
   <h2>Create a basketball Team!</h2>
   <form method="GET" action="/newteam">
-    <p>Team Name: <input type="text" name="team_name"></p>
+    <p>Team Name: <input type="text" name="name"></p>
     <p>Coach: <input type="text" name="coach_name"></p>
     <p>Point Guard: <input type="text" name="point_guard"></p>
     <p>Shooting Guard <input type="text" name="shooting_guard"></p>
