--- a/views/team.erb
+++ b/views/team.erb
@@ -5,12 +5,15 @@
   <title>Basketball Team</title>
 
   <h2>Team Name: Brooklyn Nets</h2>
-    <p>Coach: Louis Armstrong</p>
-    <p>Point Guard: Ella Fitzgerald</p>
-    <p>Shooting Guard Miles Davis</p>
-    <p>Small Forward: Dave Brubeck</p>
-    <p>Power Forward: John Coltrane</p>
-    <p>Center: Sonny Rollins</p>
+  <form method="GET" action="/newteam">
+    <p>Team Name: <input type="text" name="Team Name: Brooklyn Nets"></p>
+    <p>Coach: <input type="text" name="coach"></p>
+    <p>Point Guard: <input type="text" name="pg"></p>
+    <p>Shooting Guard <input type="text" name="sg"></p>
+    <p>Small Forward: <input type="text" name="sf"></p>
+    <p>Power Forward: <input type="text" name="pf"></p>
+    <p>Center: <input type="text" name="c"></p>
+    <input id="submit">
  </head>
  <body>
 
