--- a/views/team.erb
+++ b/views/team.erb
@@ -13,7 +13,7 @@
     <p>Small Forward: <input type="text" name="sf"></p>
     <p>Power Forward: <input type="text" name="pf"></p>
     <p>Center: <input type="text" name="c"></p>
-    <button id="submit" value="Submit">Submit</button>
+    <button type="submit" value="Submit">Submit</button>
  </head>
  <body>
 
