--- a/views/team.erb
+++ b/views/team.erb
@@ -6,13 +6,13 @@
 
   <h2>Team Name: Brooklyn Nets</h2>
   <form method="GET" action="/newteam">
-    <p>Team Name: <input type="text" name="Team Name: Brooklyn Nets"></p>
-    <p>Coach: <input type="text" name="Louis Armstrong"></p>
-    <p>Point Guard: <input type="text" name="Ella Fitzgerald"></p>
-    <p>Shooting Guard <input type="text" name="Miles Davis"></p>
-    <p>Small Forward: <input type="text" name="Dave Brunbeck"></p>
-    <p>Power Forward: <input type="text" name="John Coltrane"></p>
-    <p>Center: <input type="text" name="Sonny Rollins"></p>
+    <p>Team Name: <input type="text" name="name"></p>
+    <p>Coach: <input type="text" name="coach"></p>
+    <p>Point Guard: <input type="text" name="pg"></p>
+    <p>Shooting Guard <input type="text" name="sg"></p>
+    <p>Small Forward: <input type="text" name="sf"></p>
+    <p>Power Forward: <input type="text" name="pf"></p>
+    <p>Center: <input type="text" name="c"></p>
     <button type="submit" value="Submit">Submit</button>
  </head>
  <body>
